--- a/geospatial_vector_data.ipynb
+++ b/geospatial_vector_data.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# Geospatial Data Analysis - Vector Data\n",
-    "This notebook is about GDAL/OGR, a library for vector geospatial data formats used to traslate one format to another among those supported by the library. GDAL is written in C/C++ with API in other languages such as Python and Java. Install the gdal package before using this notebook  \n",
+    "This notebook is about GDAL/OGR, a library for vector geospatial data formats used to traslate one format to another among those supported. GDAL is written in C/C++ with bindings in other languages such as Python and Java. GDAL also provides a set of programs that can be used from the command line. Install the gdal package before using this notebook  \n",
     "\n",
     "$ conda install -c conda-forge gdal  \n",
     "\n",
     "$ conda install -c conda-forge pyshp  \n",
     "\n",
-    "Use Python [GDAL/OGR Cookbook](https://pcjericks.github.io/py-gdalogr-cookbook/index.html) for references."
+    "Use [GDAL/OGR Cookbook](https://pcjericks.github.io/py-gdalogr-cookbook/index.html) for references."
    ]
   },
   {
