--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3ec8732",
+   "id": "2d626a17",
    "metadata": {},
    "source": [
     "Let's say we are interested only in the area covered by the snow in the Landsat band1 imagery we have used in the previous section. In order to select an area inside the original image we have to apply an affine transformation that copies the pixels in the original image to the new one keeping the same metrics (i.e. distance). The affine transformation we are going to define is more precisely a translation, that is we will not apply any rotation."
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "30979a19",
+   "id": "d1f6b6b5",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5162ae30",
+   "id": "d01c02a1",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "293dd687",
+   "id": "798cf193",
    "metadata": {},
    "source": [
     "We want to move the offset of the subset image 90 km to the east and 60 km to the south"
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a2b8dd4",
+   "id": "f92c8c9d",
    "metadata": {},
    "source": [
     "Then we want the length of the subset image to be 20 km to the east and 30 km to the south"
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "46ecde44",
+   "id": "5e0ab777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbbde90b",
+   "id": "ec5f7521",
    "metadata": {},
    "source": [
     "We need to compute the number of pixels that corresponds to the size of the image for each direction"
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8316b5e3",
+   "id": "5a3fc108",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e00b59ea",
+   "id": "808a64c8",
    "metadata": {},
    "source": [
     "We also need to compute the pixel indexes that corresponds to the new offset "
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5b4b14a6",
+   "id": "e8fcc24c",
    "metadata": {},
    "outputs": [
     {
@@ -513,16 +513,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "604cc5c7",
+   "id": "7e071b89",
    "metadata": {},
    "source": [
-    "We create a new GeoTiff file for the image subset, with one band and the size we want"
+    "We create a new GeoTiff file for the image subset, with one band and the size we want. We also set the offset of the subset image in the file metadata."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c036e4cc",
+   "id": "77002f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b46c50cc",
+   "id": "bee3ef57",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b26566",
+   "id": "125f8a91",
    "metadata": {},
    "source": [
     "Now we can plot the subset image"
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0dfcb2d5",
+   "id": "b13ca895",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f708747",
+   "id": "aec69d00",
    "metadata": {},
    "outputs": [],
    "source": []
