--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -19,14 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "edde0d02",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import shutil\n",
     "import numpy as np\n",
-    "from osgeo import gdal\n",
+    "from osgeo import gdal, osr\n",
     "from PIL import Image, ImageDraw\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -401,7 +402,7 @@
    "id": "798cf193",
    "metadata": {},
    "source": [
-    "We want to move the offset of the subset image 90 km to the east and 60 km to the south"
+    "We want to move the offset of the subset image 90 km to the east and 60 km to the south. We need to compute the transformation that will be used to create the subset image. The spatial resolution for both x and y dimension will stay the same."
    ]
   },
   {
@@ -516,7 +517,7 @@
    "id": "7e071b89",
    "metadata": {},
    "source": [
-    "We create a new GeoTiff file for the image subset, with one band and the size we want. We also set the offset of the subset image in the file metadata."
+    "We create a new GeoTiff file for the image subset, with one band and the size we want. We also set the offset of the subset image in the file metadata. We will use the same spatial reference system and the same spatial resolution in both x and y direction."
    ]
   },
   {
@@ -604,9 +605,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "288249fd",
+   "metadata": {},
+   "source": [
+    "### Georeferencing\n",
+    "We want to assign a spatial reference system to an image. For this task we use some ground control points. The procedure is explained in the [QGIS User Guide](https://docs.qgis.org/3.16/en/docs/user_manual/working_with_raster/georeferencer.html). As a simple example we will refer an image to the WGS84 geographic (unprojected) reference system. The example image does not have any spatial reference system so it cannot be overlaid onto a map, for example using QGIS, because the software doesn't know where it should be put."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "def33cb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orig_fn = r'data\\raster\\Utah\\cache_no_gcp.tif'\n",
+    "fn = r'data\\raster\\Utah\\cache.tif'\n",
+    "shutil.copy(orig_fn, fn)\n",
+    "ds = gdal.Open(fn, gdal.GA_Update)\n",
+    "sr = osr.SpatialReference()\n",
+    "sr.SetWellKnownGeogCS('WGS84')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e692579",
+   "metadata": {},
+   "source": [
+    "We need at least three ground control points: we will use four, with their coordinates referenced to WGS84. For each point we need its x, y, and z coordinates and the row and column of the pixel in the image that refers to the ground point. The GDAL library uses the GCPs to compute the coefficients of the affine transformation that will map a pixel to a point in the spatial reference system.\n",
+    "\n",
+    "$$ E = a_{11}x + a_{12}y + t_E $$\n",
+    "$$ N = a_{21}x + a_{22}y + t_N $$\n",
+    "\n",
+    "Here x and y represent the pixel indexes, E and N are the spatial coordinates, often referred to as easting and northing. The coefficients $a_{ij}$ represent rotation and scale, $t_E$ and $t_N$ represent a translation. Each ground control point defines two linear equations of 6 unknown coefficients so we need at least three GCP to solve the linear system of 6 equations in 6 unknown coefficients. Since the GCPs may not be precise it is usually recommended to use more than three GCPs and compute the best approximation to the real value by minimizing the root mean square errors (RMSE) between the real spatial coordinates and the coordinates computed using the affine transformation.    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c912d4b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gcps = [gdal.GCP(-111.931075, 41.745836, 0, 1078, 648),\n",
+    "        gdal.GCP(-111.901655, 41.749269, 0, 3531, 295),\n",
+    "        gdal.GCP(-111.899180, 41.739882, 0, 3722, 1334),\n",
+    "        gdal.GCP(-111.930510, 41.728719, 0, 1102, 2548)]\n",
+    "\n",
+    "ds.SetGCPs(gcps, sr.ExportToWkt())\n",
+    "ds = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23a561e4",
+   "metadata": {},
+   "source": [
+    "The image copy has now a reference system and can be overlaid onto a map."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aec69d00",
+   "id": "d1dd705f",
    "metadata": {},
    "outputs": [],
    "source": []
