--- a/geospatial_raster_data.ipynb
+++ b/geospatial_raster_data.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1e8eab5",
+   "id": "ca4dd3b4",
    "metadata": {},
    "source": [
-    "<img src=\"images/datiaperti_small.png\" />"
+    "![datiaperti logo](images/datiaperti_small.png)"
    ]
   },
   {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "de8ae2fe",
+   "id": "040dc775",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0f11cbe",
+   "id": "2766b847",
    "metadata": {},
    "source": [
     "### Color Tables\n",
@@ -1000,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f8b412b5",
+   "id": "94b0b16b",
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b2bae51",
+   "id": "0d4053db",
    "metadata": {},
    "source": [
     "We plot the elevation model using the Python PIL package that will assign automatically a color to each value between 1 and 5 on a gray scale and black to pixels with no data. "
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d305c00b",
+   "id": "b0778689",
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c112f23",
+   "id": "8a5e2a8f",
    "metadata": {},
    "source": [
     "We want to assign colors that have a meaning for us. We make a copy of the file so that the original one will not be changed."
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "97ee8f46",
+   "id": "5ac13f42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd4db0d3",
+   "id": "a88e573f",
    "metadata": {},
    "source": [
     "We create an RGB color table. One RGB color for each value, from 1 to 5, of the pixels."
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "11bcc116",
+   "id": "f66de746",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07220417",
+   "id": "26acfb03",
    "metadata": {},
    "source": [
     "We set the color table of the dataset"
@@ -1116,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "850d3c00",
+   "id": "51cfd6d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af063753",
+   "id": "1b5d4e5e",
    "metadata": {},
    "source": [
     "We can now plot the map with colors that represent the height at each location: green for flat land and brown for mountain areas."
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "e5515709",
+   "id": "580f1fbe",
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50702993",
+   "id": "100369d3",
    "metadata": {},
    "source": [
     "### Histograms\n",
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "63e5bff8",
+   "id": "4a1a748d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37e320d6",
+   "id": "e17948fd",
    "metadata": {},
    "source": [
     "We set the parameters for GetHistogram() including the parameter to get an exact histogram (approx_ok=False) and to not include values out of range (include_out_of_range=False). The pixel values of the raster containing the Swiss elevation model range between 1 and 5 and we have to include the no data value that is assigned the integer value 0. So we need 7 buckets. Five buckets for each of the integer value used to represent the height, and two more buckets to represent the pixel values below or above our interval. In our example these two buckets will be empty."
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "0c8df727",
+   "id": "486ee3bd",
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "42768de0",
+   "id": "f54e43c0",
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ddb94a4",
+   "id": "c1611bc6",
    "metadata": {},
    "outputs": [],
    "source": []
