--- a/geospatial_vector_data.ipynb
+++ b/geospatial_vector_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/datiaperti_small.png\" />"
+    "![datiaperti logo](images/datiaperti_small.png)"
    ]
   },
   {
